Fixed wrapping on header

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
@@ -31,4 +32,5 @@
 .left {
   display: flex;
   gap: 15px;
+  flex-wrap: wrap;
 }
